hphp/hack/test/typecheck/class_level_where_clauses/this_as/interface_method_lookup_04.php.exp
File "interface_method_lookup_04.php", line 71, characters 13-15:
Cannot call `I::foo()`; it is abstract (Typing[4073])
  File "interface_method_lookup_04.php", line 15, characters 26-28:
  Declaration is here
File "interface_method_lookup_04.php", line 75, characters 13-15:
Cannot call `I::foo()`; it is abstract (Typing[4073])
  File "interface_method_lookup_04.php", line 15, characters 26-28:
  Declaration is here
File "interface_method_lookup_04.php", line 79, characters 13-15:
Cannot call `I::foo()`; it is abstract (Typing[4073])
  File "interface_method_lookup_04.php", line 15, characters 26-28:
  Declaration is here
File "interface_method_lookup_04.php", line 47, characters 14-16:
No static method `foo` in `C` (Typing[4090])
  File "interface_method_lookup_04.php", line 12, characters 7-7:
  Declaration of `C` is here
File "interface_method_lookup_04.php", line 51, characters 14-16:
No static method `foo` in `C` (Typing[4090])
  File "interface_method_lookup_04.php", line 12, characters 7-7:
  Declaration of `C` is here
File "interface_method_lookup_04.php", line 55, characters 14-16:
No static method `foo` in `C` (Typing[4090])
  File "interface_method_lookup_04.php", line 12, characters 7-7:
  Declaration of `C` is here
File "interface_method_lookup_04.php", line 83, characters 13-15:
No static method `foo` in `C` (Typing[4090])
  File "interface_method_lookup_04.php", line 12, characters 7-7:
  Declaration of `C` is here
File "interface_method_lookup_04.php", line 87, characters 13-15:
No static method `foo` in `C` (Typing[4090])
  File "interface_method_lookup_04.php", line 12, characters 7-7:
  Declaration of `C` is here
File "interface_method_lookup_04.php", line 91, characters 13-15:
No static method `foo` in `C` (Typing[4090])
  File "interface_method_lookup_04.php", line 12, characters 7-7:
  Declaration of `C` is here
File "interface_method_lookup_04.php", line 35, characters 10-18:
Invalid return type (Typing[4110])
  File "interface_method_lookup_04.php", line 34, characters 23-25:
  Expected `int`
  File "interface_method_lookup_04.php", line 15, characters 33-37:
  But got `mixed`
File "interface_method_lookup_04.php", line 39, characters 10-18:
Invalid return type (Typing[4110])
  File "interface_method_lookup_04.php", line 38, characters 23-25:
  Expected `num`
  File "interface_method_lookup_04.php", line 15, characters 33-37:
  But got `mixed`
File "interface_method_lookup_04.php", line 71, characters 10-17:
Invalid return type (Typing[4110])
  File "interface_method_lookup_04.php", line 70, characters 20-22:
  Expected `int`
  File "interface_method_lookup_04.php", line 15, characters 33-37:
  But got `mixed`
File "interface_method_lookup_04.php", line 75, characters 10-17:
Invalid return type (Typing[4110])
  File "interface_method_lookup_04.php", line 74, characters 20-22:
  Expected `num`
  File "interface_method_lookup_04.php", line 15, characters 33-37:
  But got `mixed`
